# ProjectEChallan

./: app.py  models.py  pyproject.toml
instance/: dataechallan.db
migrations/versions/: 095d5d77c1f1_.py  41be040c8268_.py  79defd375eb5_second_only_vehiclereg.py  9349e9ca0e38_added_a_new_table_named_rules_to_ensure_.py  a108e9cf2c67_.py  a63ae8174353_.py  aabe6ec313d9_initital_migrate_for_database_designed.py  f6b547ad8b5d_initial_migration.py
static/: echallanDB.sql  rules.txt
templates/: addUser.html  adminDB.html  challanLogs.html  checkRegistration.html  index.html  issueChallan.html  newChallan.html  registrationDetailAdd.html  ruleStr.html  rulesPortal.html  trafficOfficerDB.html  updateUser.html  userManagementPortal.html  userProfile.html  vehicleDetailAdd.html  vehicleRegistrationAdd.html
templates/css/: userProfile.css
venv_name/: pyvenv.cfg
venv_name/Scripts/: activate  activate.bat
