[tool.poetry]
name = "projectechallan"
version = "0.1.0"
description = ""
authors = ["AadarshBIKRAM <np03cs4a220503@heraldcollege.edu.np>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-wtf = "^1.2.1"
flask-reuploaded = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
